--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>EduAttend - Attendance Management System</title>
+    <title>AttendX - Attendance Management System</title>
     <meta name="description" content="Modern attendance management system for educational institutions with real-time tracking and seamless integration" />
-    <meta name="author" content="EduAttend" />
+    <meta name="author" content="AttendX" />
 
-    <meta property="og:title" content="EduAttend - Attendance Management System" />
+    <meta property="og:title" content="AttendX - Attendance Management System" />
     <meta property="og:description" content="Modern attendance management system for educational institutions with real-time tracking and seamless integration" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.svg" />
