--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>AttendX - Attendance Management System</title>
-    <meta name="description" content="Modern attendance management system for educational institutions with real-time tracking and seamless integration" />
+    <meta
+      name="description"
+      content="Modern attendance management system for educational institutions with real-time tracking and seamless integration"
+    />
     <meta name="author" content="AttendX" />
 
-    <meta property="og:title" content="AttendX - Attendance Management System" />
-    <meta property="og:description" content="Modern attendance management system for educational institutions with real-time tracking and seamless integration" />
+    <meta
+      property="og:title"
+      content="AttendX - Attendance Management System"
+    />
+    <meta
+      property="og:description"
+      content="Modern attendance management system for educational institutions with real-time tracking and seamless integration"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.svg" />
 
