Update meta tags and sitemap for improved SEO and content accuracy

--- a/index.html
+++ b/index.html
@@ -4,26 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>AttendX - Attendance Management System</title>
+    <link rel="canonical" href="https://attendx.space/" />
+
+    <title>
+      AttendX - Smart Attendance Management System | GPS-Based Tracking
+    </title>
     <meta
       name="description"
-      content="Modern attendance management system for educational institutions with real-time tracking and seamless integration"
+      content="AttendX is a modern GPS-based attendance management system for colleges and universities. Real-time tracking, QR codes, and seamless faculty-student integration."
+    />
+    <meta
+      name="keywords"
+      content="attendance management, GPS attendance, college attendance system, university attendance, QR code attendance, faculty dashboard, student attendance tracking, AttendX"
     />
     <meta name="author" content="AttendX" />
+    <meta name="robots" content="index, follow" />
 
+    <!-- Open Graph -->
     <meta
       property="og:title"
-      content="AttendX - Attendance Management System"
+      content="AttendX - Smart Attendance Management System"
     />
     <meta
       property="og:description"
-      content="Modern attendance management system for educational institutions with real-time tracking and seamless integration"
+      content="Modern GPS-based attendance management for educational institutions with real-time tracking."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:url" content="https://attendx.space/" />
+    <meta property="og:image" content="https://attendx.space/og-image.svg" />
+    <meta property="og:site_name" content="AttendX" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/og-image.svg" />
+    <meta
+      name="twitter:title"
+      content="AttendX - Smart Attendance Management"
+    />
+    <meta
+      name="twitter:description"
+      content="GPS-based attendance tracking for colleges and universities."
+    />
+    <meta name="twitter:image" content="https://attendx.space/og-image.svg" />
   </head>
 
   <body>
